// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should NOT become a button as a non-neutral type given 1`] = `
<input
  className="myButton"
  type="button"
/>
`;

exports[`should become a button based on an attrubute 1`] = `
<button
  className="myButton"
  type="button"
/>
`;

exports[`should become a label based on an attrubute 1`] = `
<label
  className="myLabel"
  for="myID"
/>
`;

exports[`should become a label based on an attrubute, even when defined as a span 1`] = `
<label
  className="myLabel"
  for="myID"
/>
`;

exports[`should become a radio button based on an attrubute 1`] = `
<input
  className="myRadio"
  type="radio"
/>
`;

exports[`should become a submit button based on an attrubute 1`] = `
<button
  className="mySubmitButton"
  type="submit"
/>
`;

exports[`should become an anchor based on an attrubute 1`] = `
<a
  className="myLink"
  href="#x"
/>
`;

exports[`should become an anchor based on an attrubute, even when defined as a button 1`] = `
<a
  className="myLink"
  href="#x"
/>
`;

exports[`should become an image based on an attrubute 1`] = `
<img
  className="myImage"
  src="kitten.jpg"
/>
`;

exports[`with block that has multiple classes and with an element that has a tagString 1`] = `
<div
  className="myBlock1 myBlock2 myBlock1_blockMod_value myBlock2_blockMod_value"
>
  <span
    className="extraElemCallClass myBlock1__myElem myBlock2__myElem extraElemClass extraElemCallClass_elemMod_value myBlock1__myElem_elemMod_value myBlock2__myElem_elemMod_value extraElemClass_elemMod_value"
  />
</div>
`;

exports[`with boolean modifier 1`] = `
<div
  className="block block_mod"
/>
`;

exports[`with class name only 1`] = `
<div
  className="block block_mod_value"
/>
`;

exports[`with element created through __BemtoElem prop 1`] = `
<div
  className="myBlock myBlock_blockMod_value"
>
  <div
    className="myBlock__MyElem"
  />
</div>
`;

exports[`with element created through __BemtoElem prop with more extensive options  1`] = `
<div
  className="myBlock myBlock_blockMod_value"
>
  <span
    className="myBlock__MyElem myBlock__MyElem_elemMod_value"
  />
</div>
`;

exports[`with falsey boolean modifier 1`] = `
<div
  className="block"
/>
`;

exports[`with id and class name, and local id 1`] = `
<div
  className="block block_mod_value"
  id="newId"
/>
`;

exports[`with multiple a class, some attributes and a child block 1`] = `
<h1
  className="class1 class1_mod_value"
  id="Unique"
  title="hello"
>
  <span
    className="class2"
  />
</h1>
`;

exports[`with multiple classes 1`] = `
<div
  className="block1 block2 block1_mod_value block2_mod_value"
/>
`;

exports[`with multiple classes at different places and multiple modifiers 1`] = `
<div
  className="callClass1 callClass2 defClass1 defClass2 callClass1_mod1_value callClass1_mod2 callClass1_mod3_value callClass2_mod1_value callClass2_mod2 callClass2_mod3_value defClass1_mod1_value defClass1_mod2 defClass1_mod3_value defClass2_mod1_value defClass2_mod2 defClass2_mod3_value"
/>
`;

exports[`with multiple external classes 1`] = `
<div
  className="block1 block2 block1_mod_value block2_mod_value"
/>
`;

exports[`with multiple ids in definition 1`] = `
<span
  className="block block_mod_value"
  id="id1"
/>
`;

exports[`with simple element 1`] = `
<div
  className="myBlock myBlock_blockMod_value"
>
  <div
    className="myBlock__myElem myBlock__myElem_elemMod_value"
  />
</div>
`;

exports[`with simple element using chaining 1`] = `
<div
  className="myBlock myBlock_blockMod_value"
>
  <div
    className="myBlock__MyElem myBlock__MyElem_elemMod_value"
  />
</div>
`;

exports[`with tag and explicit class name 1`] = `
<span
  className="block block_mod_value"
/>
`;

exports[`with tag and explicit id and class name 1`] = `
<span
  className="block block_mod_value"
  id="id"
/>
`;

exports[`with tag name and external className 1`] = `
<div
  className="block block_mod_value"
/>
`;

exports[`with two simple nested elements using chaining 1`] = `
<div
  className="myBlock myBlock_blockMod_value"
>
  <div
    className="myBlock__MyElem myBlock__MyElem_elemMod_value"
  >
    <div
      className="myBlock__MyElem2 myBlock__MyElem2_elem2Mod_value"
    />
  </div>
</div>
`;

exports[`without anything, but with external className 1`] = `
<div
  className="block block_mod_value"
/>
`;
